# cmd/main.go
@@ -36,13 +36,19 @@ func main() {
 
 	v1 := r.Group("/api/v1")
 	{
-		v1.Use(c.Auth())
-
-		v1.Use(c.ShowApiMiddleware())
+		// without user
 		v1.GET("/locations", c.GetLocations)
 
+		v1.Use(c.Auth())
+
+		// user + show_api middleware
+		v1.Use(c.ShowApiMiddleware())
+
+		// user + show_api middleware
 		v1.Use(c.ManagerMiddleware())
 		v1.POST("/scan", c.AddScan)
+		v1.POST("/findByPlate", c.VinByPlate)
+
 		// v1.GET("/scan", c.AddScanGet)
 		// v1.GET("/users/:id", apis.GetUser)
 	}
